--- a/src/components/common/ProductDetail/ProductDetail.module.css
+++ b/src/components/common/ProductDetail/ProductDetail.module.css
@@ -7,7 +7,7 @@
 .container {
   max-width: var(--container-max);
   margin: 0 auto;
-  padding: 0 max(var(--container-padding), calc((100vw - 950px) / 2));
+  padding: 0 var(--content-padding-x);
 }
 
 /* Breadcrumb */
@@ -160,7 +160,7 @@
 /* Product Info Section */
 .productInfo {
   flex: 1;
-  max-width: 400px;
+  min-width: 0;
   padding-top: 0;
 }
 
